# yet-another-ai-redteam

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
airedteam/: cli.py  config.py  logging.py
airedteam/api/: app.py  auth.py  deps.py
airedteam/api/routers/: attack_methods.py  converters.py  datasets.py  login.py  manual.py  plugins.py  prompt_assets.py  runs.py  scenarios.py  settings.py  targets.py
airedteam/builtins/converters/: base64_conv.py  emoji_substitution.py  identity.py  persona_role_play_prefix.py  prefix.py  rot13.py  translation_llm.py
airedteam/builtins/converters/encoding/: a1z26.py  affine_cipher.py  ascii_art.py  ascii_smuggler.py  ascii_smuggling.py  ask_to_decode.py  atbash.py  base2048.py  base64_conv.py  bin_ascii.py  binary.py  binary_tree.py  braille.py  caesar.py  char_code.py  code_chameleon.py  compact_unicode.py  ecoji.py  emoji_byte.py  hex_conv.py  hex_mixin.py  homoglyph.py  json_string.py  math_unicode.py  morse.py  nato.py  ogham.py  pig_latin.py  rot13.py  sneaky_bits_smuggler.py  superscript.py  token_break.py  transliteration.py  unicode_escape.py  unicode_obfuscation.py  unicode_replacement.py  unicode_substitution.py  unicode_tag_obfuscation.py  url_encode.py  variation_selector_smuggler.py  (+13 more)
airedteam/builtins/converters/frameworks/: coverage.py
airedteam/builtins/converters/llm_rewrite/: llm_generic.py  llm_malicious_question.py  llm_persuasion.py  llm_random_translation.py  (+13 more)
airedteam/builtins/datasets/: hf.py  json_upload.py
airedteam/builtins/executors/: best_of_n.py  converter_method.py  crescendo.py  general_multi_turn.py  jailbreak_iterative.py  multi_turn_base.py  pair.py  single_turn.py  split_executor.py  tap_tree_search.py
airedteam/builtins/prompt_assets/: PYRIT_NOTICE.txt  __init__.py  assets.json  attack_method_templates.json  converter_prompt_assets.json  imported_attack_method_templates.json  pyrit_jailbreak_templates.json
airedteam/builtins/scenarios/: owasp_llm_top10_jailbreak.json  owasp_llm_top10_jailbreak.py  presets.py
airedteam/builtins/scorers/: llm_judge.py  refusal.py  regex.py  substring.py
airedteam/builtins/targets/: anthropic_compat.py  artifact_content.py  openai_compat.py
airedteam/core/: attack_method_categories.py  executor_methods.py  language.py  plugins.py  prompt_framing_templates.py  registry.py  scenario.py  score_status.py  types.py
airedteam/engine/: factory.py  input_limits.py  orchestrator.py  progress.py  run_engine.py  sampling.py
airedteam/runspec/: models.py
airedteam/services/: attack_method_categories.py  converter_runtime.py  converter_templates.py  converters.py  custom_scenarios.py  datasets.py  manual.py  prompt_assets.py  run_monitor.py  runs.py  target_configs.py
airedteam/storage/: blobs.py  db.py  models.py  secretbox.py
alembic/: env.py
alembic/versions/: 0001_init.py  0002_phase2_manual_and_reviewer.py  0003_phase3_prompt_assets.py  0004_custom_prompt_assets.py  0005_dataset_versions_and_asset_categories.py  0006_attempt_work_keys.py  0007_attempt_original_prompt.py  0008_executor_first_attempts.py  0009_attack_method_categories.py  0010_attempt_timing_columns.py  0011_custom_scenarios.py
docker/: api.Dockerfile  frontend.Dockerfile
docs/: llm-judger-prompt-analysis.md  redteam-attack-method-union.md
docs/superpowers/plans/: 2026-04-23-airedteam-mvp.md  2026-04-24-airedteam-phase2-A-C.md  2026-05-18-airedteam-phase3-completion-log.md  2026-06-17-custom-pipeline-scenarios.md
docs/superpowers/specs/: 2026-04-23-airedteam-mvp-design.md  2026-06-17-custom-pipeline-scenarios-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LanguageSwitch.tsx  Layout.tsx  PluginParamsForm.tsx
frontend/src/lib/: api.ts  attackMethodTaxonomy.ts  attackMethodTemplates.ts  auth.ts  converterLlmParams.ts  customScenarioPayload.ts  i18n.tsx  pagination.ts  promptAssetHelpers.ts  runExport.ts
frontend/src/pages/: Assets.tsx  AttackMethods.tsx  Dashboard.tsx  Datasets.tsx  Login.tsx  ManualConsole.tsx  NewRun.tsx  PromptAssets.tsx  RunDetail.tsx  Runs.tsx  Settings.tsx  Targets.tsx
frontend/tests/: attackMethodTaxonomy.test.ts  attackMethodTemplates.test.ts  converterLlmParams.test.ts  customScenarioPayload.test.ts  pagination.test.ts  promptAssetHelpers.test.ts  runExportParams.test.ts
tests/integration/: test_api_annotation.py  test_api_attack_methods.py  test_api_converter_preview.py  test_api_custom_scenarios.py  test_api_dataset_items.py  test_api_datasets.py  test_api_login.py  test_api_manual.py  test_api_plugins.py  test_api_prompt_assets.py  test_api_run_report_export.py  test_api_runs.py  test_api_settings.py  test_api_target_check.py  test_api_targets.py  test_crescendo_run.py  test_e2e_scenario.py  test_general_multi_turn_run.py  test_pair_run.py  test_phase2_e2e.py  test_run_service.py  test_run_service_llm_judge.py  test_run_service_multiturn.py  test_runs_sampling.py  test_translation_llm_run.py
tests/unit/: test_alembic_migrations.py  test_attack_method_categories.py  test_auth.py  test_blobs.py  test_chinese_converters.py  test_cli.py  test_config.py  test_converter_artifacts.py  test_converter_coverage_manifest.py  test_converter_emoji.py  test_converter_expansion.py  test_converter_leetspeak.py  test_converter_persona.py  test_converter_translation.py  test_converter_unicode_obfuscation.py  test_converters_basic.py  test_converters_more.py  test_core_multiturn_types.py  test_core_plugins.py  test_core_types.py  test_crescendo.py  test_dataset_hf.py  test_dataset_json.py  test_engine_factory.py  test_executor_best_of_n.py  test_executor_single_turn.py  test_full_dataset_fixtures.py  test_general_multi_turn.py  test_llm_rewrite_prompt_assets.py  test_models_phase2.py  test_multi_turn_base.py  test_orchestrator.py  test_pair.py  test_progress_bus.py  test_prompt_asset_plugins.py  test_prompt_assets.py  test_registry.py  test_run_engine.py  test_run_monitor.py  test_runspec_models.py  (+17 more)
(+180 files in other folders)
