[project]
name = "airedteam"
version = "0.1.0"
description = "Low-code AI redteam testing framework"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "aiosqlite>=0.19",
  "httpx>=0.27",
  "cryptography>=42",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "anyio>=4.3",
  "datasets>=2.18",
  "click>=8.1",
  "rich>=13.7",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
airedteam = "airedteam.cli:main"

[project.entry-points."airedteam.targets"]
openai_compat = "airedteam.builtins.targets.openai_compat:OpenAICompatTarget"
anthropic_compat = "airedteam.builtins.targets.anthropic_compat:AnthropicCompatTarget"

[project.entry-points."airedteam.datasets"]
hf = "airedteam.builtins.datasets.hf:HuggingFaceDataset"
json_upload = "airedteam.builtins.datasets.json_upload:JsonUploadDataset"

[project.entry-points."airedteam.converters"]
identity = "airedteam.builtins.converters.identity:IdentityConverter"
base64 = "airedteam.builtins.converters.base64_conv:Base64Converter"
rot13 = "airedteam.builtins.converters.rot13:Rot13Converter"
prefix = "airedteam.builtins.converters.prefix:PrefixConverter"

[project.entry-points."airedteam.executors"]
single_turn = "airedteam.builtins.executors.single_turn:SingleTurnExecutor"

[project.entry-points."airedteam.scorers"]
substring = "airedteam.builtins.scorers.substring:SubstringScorer"
regex = "airedteam.builtins.scorers.regex:RegexScorer"
refusal = "airedteam.builtins.scorers.refusal:RefusalScorer"
llm_judge = "airedteam.builtins.scorers.llm_judge:LLMJudgeScorer"

[project.entry-points."airedteam.scenarios"]
owasp_llm_top10_jailbreak = "airedteam.builtins.scenarios.owasp_llm_top10_jailbreak:scenario"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airedteam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
