[project]
name = "airedteam"
version = "0.1.0"
description = "Low-code AI redteam testing framework"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "aiosqlite>=0.19",
  "httpx>=0.27",
  "cryptography>=42",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "anyio>=4.3",
  "datasets>=2.18",
  "click>=8.1",
  "rich>=13.7",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "sse-starlette>=2.0",
  "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
airedteam = "airedteam.cli:main"

[project.entry-points."airedteam.targets"]
openai_compat = "airedteam.builtins.targets.openai_compat:OpenAICompatTarget"
openai_compat_new_session = "airedteam.builtins.targets.openai_compat:OpenAICompatNewSessionTarget"
anthropic_compat = "airedteam.builtins.targets.anthropic_compat:AnthropicCompatTarget"

[project.entry-points."airedteam.datasets"]
hf = "airedteam.builtins.datasets.hf:HuggingFaceDataset"
json_upload = "airedteam.builtins.datasets.json_upload:JsonUploadDataset"

[project.entry-points."airedteam.converters"]
identity = "airedteam.builtins.converters.utility.identity:IdentityConverter"
a1z26 = "airedteam.builtins.converters.encoding.a1z26:A1Z26Converter"
affine_cipher = "airedteam.builtins.converters.encoding.affine_cipher:AffineCipherConverter"
base64 = "airedteam.builtins.converters.encoding.base64_conv:Base64Converter"
rot13 = "airedteam.builtins.converters.encoding.rot13:Rot13Converter"
prefix = "airedteam.builtins.converters.prompt_framing.prefix:PrefixConverter"
forced_response = "airedteam.builtins.converters.prompt_framing.forced_response:ForcedResponseConverter"
forged_assistant_approval = "airedteam.builtins.converters.prompt_framing.forged_assistant_approval:ForgedAssistantApprovalConverter"
forged_dialogue_history = "airedteam.builtins.converters.prompt_framing.forged_dialogue_history:ForgedDialogueHistoryConverter"
completion_continuation = "airedteam.builtins.converters.prompt_framing.completion_continuation:CompletionContinuationConverter"
forged_tool_result = "airedteam.builtins.converters.prompt_framing.forged_tool_result:ForgedToolResultConverter"
unicode_obfuscation = "airedteam.builtins.converters.encoding.unicode_obfuscation:UnicodeObfuscationConverter"
leetspeak = "airedteam.builtins.converters.obfuscation.leetspeak:LeetspeakConverter"
binary_tree = "airedteam.builtins.converters.encoding.binary_tree:BinaryTreeConverter"
persona_role_play_prefix = "airedteam.builtins.converters.prompt_framing.persona_role_play_prefix:PersonaRolePlayPrefixConverter"
emoji_substitution = "airedteam.builtins.converters.obfuscation.emoji_substitution:EmojiSubstitutionConverter"
translation_llm = "airedteam.builtins.converters.llm_rewrite.translation_llm:TranslationLLMConverter"
binary = "airedteam.builtins.converters.encoding.binary:BinaryConverter"
hex = "airedteam.builtins.converters.encoding.hex_conv:HexConverter"
morse = "airedteam.builtins.converters.encoding.morse:MorseConverter"
caesar = "airedteam.builtins.converters.encoding.caesar:CaesarConverter"
atbash = "airedteam.builtins.converters.encoding.atbash:AtbashConverter"
random_case = "airedteam.builtins.converters.obfuscation.random_case:RandomCaseConverter"
string_join = "airedteam.builtins.converters.obfuscation.string_join:StringJoinConverter"
char_swap = "airedteam.builtins.converters.obfuscation.char_swap:CharSwapConverter"
char_corrupt = "airedteam.builtins.converters.obfuscation.char_corrupt:CharCorruptConverter"
char_dropout = "airedteam.builtins.converters.obfuscation.char_dropout:CharDropoutConverter"
word_scramble = "airedteam.builtins.converters.obfuscation.word_scramble:WordScrambleConverter"
json_string = "airedteam.builtins.converters.encoding.json_string:JsonStringConverter"
markdown_wrapper = "airedteam.builtins.converters.prompt_framing.markdown_wrapper:MarkdownWrapperConverter"
unicode_tag_obfuscation = "airedteam.builtins.converters.encoding.unicode_tag_obfuscation:UnicodeTagObfuscationConverter"
llm_variation = "airedteam.builtins.converters.llm_rewrite.llm_variation:LLMVariationConverter"
llm_tone = "airedteam.builtins.converters.llm_rewrite.llm_tone:LLMToneConverter"
llm_persuasion = "airedteam.builtins.converters.llm_rewrite.llm_persuasion:LLMPersuasionConverter"
lowercase = "airedteam.builtins.converters.obfuscation.lowercase:LowercaseConverter"
length = "airedteam.builtins.converters.obfuscation.length:LengthConverter"
char_code = "airedteam.builtins.converters.encoding.char_code:CharCodeConverter"
ask_to_decode = "airedteam.builtins.converters.encoding.ask_to_decode:AskToDecodeConverter"
character_space = "airedteam.builtins.converters.obfuscation.character_space:CharacterSpaceConverter"
first_letter = "airedteam.builtins.converters.obfuscation.first_letter:FirstLetterConverter"
flip_text = "airedteam.builtins.converters.obfuscation.flip_text:FlipTextConverter"
insert_punctuation = "airedteam.builtins.converters.obfuscation.insert_punctuation:InsertPunctuationConverter"
nato = "airedteam.builtins.converters.encoding.nato:NatoConverter"
repeat_token = "airedteam.builtins.converters.obfuscation.repeat_token:RepeatTokenConverter"
search_replace = "airedteam.builtins.converters.obfuscation.search_replace:SearchReplaceConverter"
suffix_append = "airedteam.builtins.converters.obfuscation.suffix_append:SuffixAppendConverter"
superscript = "airedteam.builtins.converters.encoding.superscript:SuperscriptConverter"
url_encode = "airedteam.builtins.converters.encoding.url_encode:UrlEncodeConverter"
zalgo = "airedteam.builtins.converters.obfuscation.zalgo:ZalgoConverter"
diacritic = "airedteam.builtins.converters.obfuscation.diacritic:DiacriticConverter"
noise = "airedteam.builtins.converters.obfuscation.noise:NoiseConverter"
odd_even = "airedteam.builtins.converters.obfuscation.odd_even:OddEvenConverter"
ogham = "airedteam.builtins.converters.encoding.ogham:OghamConverter"
denylist = "airedteam.builtins.converters.obfuscation.denylist:DenylistConverter"
disemvowel = "airedteam.builtins.converters.obfuscation.disemvowel:DisemvowelConverter"
template_jailbreak = "airedteam.builtins.converters.prompt_framing.template_jailbreak:TemplateJailbreakConverter"
negation_trap = "airedteam.builtins.converters.prompt_framing.negation_trap:NegationTrapConverter"
braille = "airedteam.builtins.converters.encoding.braille:BrailleConverter"
unicode_escape = "airedteam.builtins.converters.encoding.unicode_escape:UnicodeEscapeConverter"
zero_width = "airedteam.builtins.converters.obfuscation.zero_width:ZeroWidthConverter"
math_unicode = "airedteam.builtins.converters.encoding.math_unicode:MathUnicodeConverter"
colloquial_wordswap = "airedteam.builtins.converters.obfuscation.colloquial_wordswap:ColloquialWordswapConverter"
math_prompt = "airedteam.builtins.converters.prompt_framing.math_prompt:MathPromptConverter"
transparency_attack = "airedteam.builtins.converters.obfuscation.transparency_attack:TransparencyAttackConverter"
ascii_art = "airedteam.builtins.converters.encoding.ascii_art:AsciiArtConverter"
bin_ascii = "airedteam.builtins.converters.encoding.bin_ascii:BinAsciiConverter"
compact_unicode = "airedteam.builtins.converters.encoding.compact_unicode:CompactUnicodeConverter"
emoji_byte = "airedteam.builtins.converters.encoding.emoji_byte:EmojiByteConverter"
ansi_escape = "airedteam.builtins.converters.obfuscation.ansi_escape:AnsiEscapeConverter"
llm_generic = "airedteam.builtins.converters.llm_rewrite.llm_generic:LLMGenericConverter"
tense = "airedteam.builtins.converters.perturbation.tense:TenseConverter"
template_segment = "airedteam.builtins.converters.prompt_framing.template_segment:TemplateSegmentConverter"
selective_text = "airedteam.builtins.converters.obfuscation.selective_text:SelectiveTextConverter"
base2048 = "airedteam.builtins.converters.encoding.base2048:Base2048Converter"
ecoji = "airedteam.builtins.converters.encoding.ecoji:EcojiConverter"
unicode_replacement = "airedteam.builtins.converters.encoding.unicode_replacement:UnicodeReplacementConverter"
unicode_substitution = "airedteam.builtins.converters.encoding.unicode_substitution:UnicodeSubstitutionConverter"
code_chameleon = "airedteam.builtins.converters.encoding.code_chameleon:CodeChameleonConverter"
llm_malicious_question = "airedteam.builtins.converters.llm_rewrite.llm_malicious_question:LLMMaliciousQuestionConverter"
llm_toxic_sentence = "airedteam.builtins.converters.llm_rewrite.llm_toxic_sentence:LLMToxicSentenceConverter"
llm_random_translation = "airedteam.builtins.converters.llm_rewrite.llm_random_translation:LLMRandomTranslationConverter"
llm_scientific_translation = "airedteam.builtins.converters.llm_rewrite.llm_scientific_translation:LLMScientificTranslationConverter"
camel_case = "airedteam.builtins.converters.obfuscation.camel_case:CamelCaseConverter"
chain_of_thought = "airedteam.builtins.converters.prompt_framing.chain_of_thought:ChainOfThoughtConverter"
emoji_smuggling = "airedteam.builtins.converters.obfuscation.emoji_smuggling:EmojiSmugglingConverter"
prompt_injection = "airedteam.builtins.converters.prompt_framing.prompt_injection:PromptInjectionConverter"
skeleton_key = "airedteam.builtins.converters.prompt_framing.skeleton_key:SkeletonKeyConverter"
control_chars_injection = "airedteam.builtins.converters.obfuscation.control_chars_injection:ControlCharsInjectionConverter"
control_chars_repetition = "airedteam.builtins.converters.obfuscation.control_chars_repetition:ControlCharsRepetitionConverter"
ascii_smuggler = "airedteam.builtins.converters.encoding.ascii_smuggler:AsciiSmugglerConverter"
job_role_generator = "airedteam.builtins.converters.prompt_framing.job_role_generator:JobRoleGeneratorConverter"
payload_mask_attack = "airedteam.builtins.converters.prompt_framing.payload_mask_attack:PayloadMaskAttackConverter"
sg_sentence_generator = "airedteam.builtins.converters.prompt_framing.sg_sentence_generator:SGSentenceGeneratorConverter"
math_obfuscation = "airedteam.builtins.converters.obfuscation.math_obfuscation:MathObfuscationConverter"
sneaky_bits_smuggler = "airedteam.builtins.converters.encoding.sneaky_bits_smuggler:SneakyBitsSmugglerConverter"
variation_selector_smuggler = "airedteam.builtins.converters.encoding.variation_selector_smuggler:VariationSelectorSmugglerConverter"
human_in_the_loop = "airedteam.builtins.converters.prompt_framing.human_in_the_loop:HumanInTheLoopConverter"
whitespace = "airedteam.builtins.converters.obfuscation.whitespace:WhitespaceConverter"
case_swap = "airedteam.builtins.converters.obfuscation.case_swap:CaseSwapConverter"
word_substitution = "airedteam.builtins.converters.obfuscation.word_substitution:WordSubstitutionConverter"
acronym = "airedteam.builtins.converters.obfuscation.acronym:AcronymConverter"
sandwich = "airedteam.builtins.converters.prompt_framing.sandwich:SandwichConverter"
suffix = "airedteam.builtins.converters.prompt_framing.suffix:SuffixConverter"
few_shot = "airedteam.builtins.converters.prompt_framing.few_shot:FewShotConverter"
role_prefix = "airedteam.builtins.converters.prompt_framing.role_prefix:RolePrefixConverter"
instruction_tag = "airedteam.builtins.converters.prompt_framing.instruction_tag:InstructionTagConverter"
payload_split = "airedteam.builtins.converters.prompt_framing.payload_split:PayloadSplitConverter"
fictional = "airedteam.builtins.converters.prompt_framing.fictional:FictionalConverter"
research = "airedteam.builtins.converters.prompt_framing.research:ResearchConverter"
roleplay = "airedteam.builtins.converters.prompt_framing.roleplay:RoleplayConverter"
gray_box = "airedteam.builtins.converters.prompt_framing.gray_box:GrayBoxConverter"
prompt_probing = "airedteam.builtins.converters.prompt_framing.prompt_probing:PromptProbingConverter"
adversarial_poetry = "airedteam.builtins.converters.prompt_framing.adversarial_poetry:AdversarialPoetryConverter"
system_override = "airedteam.builtins.converters.prompt_framing.system_override:SystemOverrideConverter"
permission_escalation = "airedteam.builtins.converters.prompt_framing.permission_escalation:PermissionEscalationConverter"
goal_redirection = "airedteam.builtins.converters.prompt_framing.goal_redirection:GoalRedirectionConverter"
linguistic_confusion = "airedteam.builtins.converters.prompt_framing.linguistic_confusion:LinguisticConfusionConverter"
input_bypass = "airedteam.builtins.converters.prompt_framing.input_bypass:InputBypassConverter"
context_poisoning = "airedteam.builtins.converters.prompt_framing.context_poisoning:ContextPoisoningConverter"
character_stream = "airedteam.builtins.converters.obfuscation.character_stream:CharacterStreamConverter"
context_flooding = "airedteam.builtins.converters.prompt_framing.context_flooding:ContextFloodingConverter"
embedded_instruction_json = "airedteam.builtins.converters.prompt_framing.embedded_instruction_json:EmbeddedInstructionJsonConverter"
synthetic_context_injection = "airedteam.builtins.converters.prompt_framing.synthetic_context_injection:SyntheticContextInjectionConverter"
authority_escalation = "airedteam.builtins.converters.prompt_framing.authority_escalation:AuthorityEscalationConverter"
emotional_manipulation = "airedteam.builtins.converters.prompt_framing.emotional_manipulation:EmotionalManipulationConverter"
semantic_manipulation = "airedteam.builtins.converters.prompt_framing.semantic_manipulation:SemanticManipulationConverter"
dan = "airedteam.builtins.converters.prompt_framing.dan:DANConverter"
likert_framing = "airedteam.builtins.converters.prompt_framing.likert_framing:LikertFramingConverter"
citation_framing = "airedteam.builtins.converters.prompt_framing.citation_framing:CitationFramingConverter"
grandma_framing = "airedteam.builtins.converters.prompt_framing.grandma_framing:GrandmaFramingConverter"
ascii_smuggling = "airedteam.builtins.converters.encoding.ascii_smuggling:ASCIISmugglingConverter"
transliteration = "airedteam.builtins.converters.encoding.transliteration:TransliterationConverter"
token_break = "airedteam.builtins.converters.encoding.token_break:TokenBreakConverter"
chat_inject = "airedteam.builtins.converters.prompt_framing.chat_inject:ChatInjectConverter"
low_resource_language = "airedteam.builtins.converters.obfuscation.low_resource_language:LowResourceLanguageConverter"
paraphrase_fast = "airedteam.builtins.converters.perturbation.paraphrase_fast:ParaphraseFastConverter"
paraphrase_pegasus = "airedteam.builtins.converters.perturbation.paraphrase_pegasus:ParaphrasePegasusConverter"
authoritative_markup = "airedteam.builtins.converters.prompt_framing.authoritative_markup:AuthoritativeMarkupConverter"
composite_jailbreak = "airedteam.builtins.converters.prompt_framing.composite_jailbreak:CompositeJailbreakConverter"
deepset_injection_dataset = "airedteam.builtins.converters.prompt_framing.deepset_injection_dataset:DeepsetInjectionDatasetConverter"
gcg = "airedteam.builtins.converters.prompt_framing.gcg:GCGConverter"
homoglyph = "airedteam.builtins.converters.encoding.homoglyph:HomoglyphConverter"
hex_mixin = "airedteam.builtins.converters.encoding.hex_mixin:HexMixinConverter"
indirect_web_pwn = "airedteam.builtins.converters.prompt_framing.indirect_web_pwn:IndirectWebPwnConverter"
meta_agent = "airedteam.builtins.converters.prompt_framing.meta_agent:MetaAgentConverter"
mischievous_user = "airedteam.builtins.converters.prompt_framing.mischievous_user:MischievousUserConverter"
multilingual = "airedteam.builtins.converters.prompt_framing.multilingual:MultilingualConverter"
pig_latin = "airedteam.builtins.converters.encoding.pig_latin:PigLatinConverter"
word_mixin = "airedteam.builtins.converters.obfuscation.word_mixin:WordMixinConverter"
add_image_text = "airedteam.builtins.converters.multimodal.add_image_text:AddImageTextConverter"
add_image_to_video = "airedteam.builtins.converters.multimodal.add_image_to_video:AddImageToVideoConverter"
add_text_image = "airedteam.builtins.converters.multimodal.add_text_image:AddTextImageConverter"
audio_echo = "airedteam.builtins.converters.multimodal.audio_echo:AudioEchoConverter"
audio_frequency = "airedteam.builtins.converters.multimodal.audio_frequency:AudioFrequencyConverter"
audio_speed = "airedteam.builtins.converters.multimodal.audio_speed:AudioSpeedConverter"
audio_volume = "airedteam.builtins.converters.multimodal.audio_volume:AudioVolumeConverter"
audio_white_noise = "airedteam.builtins.converters.multimodal.audio_white_noise:AudioWhiteNoiseConverter"
azure_speech_audio_to_text = "airedteam.builtins.converters.multimodal.azure_speech_audio_to_text:AzureSpeechAudioToTextConverter"
azure_speech_text_to_audio = "airedteam.builtins.converters.multimodal.azure_speech_text_to_audio:AzureSpeechTextToAudioConverter"
image_color_saturation = "airedteam.builtins.converters.multimodal.image_color_saturation:ImageColorSaturationConverter"
image_compression = "airedteam.builtins.converters.multimodal.image_compression:ImageCompressionConverter"
image_noise = "airedteam.builtins.converters.multimodal.image_noise:ImageNoiseConverter"
image_resizing = "airedteam.builtins.converters.multimodal.image_resizing:ImageResizingConverter"
image_rotation = "airedteam.builtins.converters.multimodal.image_rotation:ImageRotationConverter"
pdf = "airedteam.builtins.converters.multimodal.pdf:PDFConverter"
qr_code = "airedteam.builtins.converters.multimodal.qr_code:QRCodeConverter"
word_doc = "airedteam.builtins.converters.multimodal.word_doc:WordDocConverter"

[project.entry-points."airedteam.executors"]
single_turn = "airedteam.builtins.executors.single_turn:SingleTurnExecutor"
split_executor = "airedteam.builtins.executors.split_executor:SplitExecutor"
best_of_n = "airedteam.builtins.executors.best_of_n:BestOfNExecutor"
crescendo = "airedteam.builtins.executors.crescendo:CrescendoExecutor"
jailbreak_iterative = "airedteam.builtins.executors.jailbreak_iterative:JailbreakIterativeExecutor"
pair = "airedteam.builtins.executors.pair:PAIRExecutor"
general_multi_turn = "airedteam.builtins.executors.general_multi_turn:GeneralMultiTurnExecutor"

[project.entry-points."airedteam.scorers"]
substring = "airedteam.builtins.scorers.substring:SubstringScorer"
regex = "airedteam.builtins.scorers.regex:RegexScorer"
refusal = "airedteam.builtins.scorers.refusal:RefusalScorer"
llm_judge = "airedteam.builtins.scorers.llm_judge:LLMJudgeScorer"

[project.entry-points."airedteam.scenarios"]
owasp_llm_top10_jailbreak = "airedteam.builtins.scenarios.owasp_llm_top10_jailbreak:scenario"
direct_safety_baseline = "airedteam.builtins.scenarios.presets:direct_safety_baseline"
encoding_bypass = "airedteam.builtins.scenarios.presets:encoding_bypass"
obfuscation_robustness = "airedteam.builtins.scenarios.presets:obfuscation_robustness"
prompt_framing_jailbreak = "airedteam.builtins.scenarios.presets:prompt_framing_jailbreak"
structured_injection = "airedteam.builtins.scenarios.presets:structured_injection"
input_limited_split = "airedteam.builtins.scenarios.presets:input_limited_split"
best_of_n_jailbreak = "airedteam.builtins.scenarios.presets:best_of_n_jailbreak"
crescendo_adaptive = "airedteam.builtins.scenarios.presets:crescendo_adaptive"
pair_iterative = "airedteam.builtins.scenarios.presets:pair_iterative"
general_multi_turn_adaptive = "airedteam.builtins.scenarios.presets:general_multi_turn_adaptive"
llm_rewrite_bypass = "airedteam.builtins.scenarios.presets:llm_rewrite_bypass"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airedteam"]

[tool.hatch.build.targets.wheel.force-include]
"airedteam/builtins/scenarios/owasp_llm_top10_jailbreak.json" = "airedteam/builtins/scenarios/owasp_llm_top10_jailbreak.json"
"airedteam/builtins/datasets/samples/advbench_sample.json" = "airedteam/builtins/datasets/samples/advbench_sample.json"
"airedteam/builtins/datasets/samples/harmbench_sample.json" = "airedteam/builtins/datasets/samples/harmbench_sample.json"
"airedteam/builtins/datasets/samples/advbench_full.json" = "airedteam/builtins/datasets/samples/advbench_full.json"
"airedteam/builtins/datasets/samples/harmbench_full.json" = "airedteam/builtins/datasets/samples/harmbench_full.json"
"airedteam/builtins/prompt_assets/assets.json" = "airedteam/builtins/prompt_assets/assets.json"
"airedteam/builtins/prompt_assets/converter_prompt_assets.json" = "airedteam/builtins/prompt_assets/converter_prompt_assets.json"
"airedteam/builtins/prompt_assets/pyrit_jailbreak_templates.json" = "airedteam/builtins/prompt_assets/pyrit_jailbreak_templates.json"
"airedteam/builtins/prompt_assets/PYRIT_NOTICE.txt" = "airedteam/builtins/prompt_assets/PYRIT_NOTICE.txt"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
